--- a/internal/configs/config.yaml
+++ b/internal/configs/config.yaml
@@ -6,6 +6,6 @@ database:
   dataSourceName: "postgres://postgres:password@localhost:5432/spotify_catalog_db?sslmode=disable"
 
 spotifyConfig:
-  clientID: "a59dda72ea4f44c29dee12f2a33bbf40"
-  clientSecret: "92b2ec01d38b4c20aa6a3b7c34c621bc"
+  clientID: "secret"
+  clientSecret: "secret"
   redirectURI: "http://localhost:8080/callback"
